fix: hide scrollbars in ff (WEBAPP-4686) (#2447)

--- a/app/style/modal/group-creation.less
+++ b/app/style/modal/group-creation.less
@@ -92,14 +92,11 @@
     padding-right: 16px;
     user-list {
       margin-left: -16px;
-    }
-  }
-
-  user-list {
-    overflow-x: hidden;
-    .search-list-item {
-      align-items: center;
-      margin: 0 16px;
+      overflow-x: hidden;
+      .search-list-item {
+        align-items: center;
+        margin: 0 16px;
+      }
     }
   }
 
